components/form/_field.scss
// Fylgja (https://fylgja.dev)
// Licensed under MIT Open Source

@use "helper" as *;

// *1 Force default display for all browsers
// Fun fact Chromium browser use this as default display value for date fields

// Form field templates
@mixin form-field {
    display: flex; // *1
    width: 100%;
    padding: var(--form-padding, #{$form-padding});
    border: var(--form-border-width, #{$form-border-width}) $form-border-style;
    border-color: var(--form-stroke, #{$form-border-color});
    border-radius: var(--form-radius, #{$form-radius});
    background-color: var(--form-bg, #{$form-bg});
    color: var(--form-color, #{$form-color});
    transition: $form-transition-speed $form-transition-effect;
    transition-property: $form-transition-property;
    -webkit-appearance: none;
    appearance: none;

    &:focus {
        border-color: var(--form-focus-color, #{$form-focus-color});
        box-shadow: var(--form-focus-style, #{$form-focus-style});
        outline: 0; // Will be dropped in v2
    }

    &:is(:disabled, .is-disabled) {
        border-style: $form-not-editable-border-style;
        box-shadow: none;
        opacity: $form-disabled-opacity;
        pointer-events: none;
    }

    &[readonly] {
        border-style: $form-not-editable-border-style;
    }
}

